--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </section>
 
         <section id="container">
-            <h1>Login</h1>
+            <h1>Entrar no Portal</h1>
             <p>Bem vindo ao novo portal, entre em contato para mais informações.</p>
 
             <form action="cadastro.php" method="get" autocomplete="on">
