--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Tela de Login</title>
 </head>
 <body>
@@ -20,6 +21,28 @@
                 <p>Tela de login criado para o desafio do curso em vidéo com o professor Gustavo Guabara.</p>
 
                 <form action="cadas.php" method="post">
+
+                    <p>
+                        <span id="person" class="material-symbols-outlined">
+                            person
+                            </span>
+                        <input type="text" name="user" id="iuser">
+                    </p>
+
+                    <p>
+                        <span id="person" class="material-symbols-outlined">
+                            lock
+                            </span>
+                        <input type="password" name="user" id="iuser">
+                    </p>
+
+                    <p>
+                        <button>ENTRAR</button>
+                    </p>
+
+                    <p>
+                        <button>ESQUECI A SENHA</button>
+                    </p>
 
 
                 </form>
