--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </p>
 
                     <p>
-                        <span id="person" class="material-symbols-outlined">
+                        <span id="person" class="material-symbols-outlined" itemid="lock">
                             lock
                             </span>
                         <input type="password" name="user" id="iuser">
